@@ -30,6 +30,7 @@ import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.mapred.InputFormat;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.OutputCollector;
+import org.apache.hadoop.mapred.OutputFormat;
 import org.apache.hadoop.mapred.SequenceFileInputFormat;
 import org.apache.hadoop.mapred.SequenceFileOutputFormat;
 
@@ -82,6 +83,11 @@ public class SequenceFile extends Scheme
   public InputFormat getInputFormat( JobConf conf )
     {
     return new SequenceFileInputFormat();
+    }
+
+  public OutputFormat getOutputFormat( JobConf conf )
+    {
+    return new SequenceFileOutputFormat();
     }
 
   @Override
