@@ -1,0 +1,66 @@
+/*
+ * Copyright (c) 2008, Your Corporation. All Rights Reserved.
+ */
+
+package cascading;
+
+/** @version $Id: //depot/calku/cascading/src/test/cascading/FieldedPipesTest.java#4 $ */
+public class EndPipesTest extends ClusterTestCase
+  {
+  String inputFileApache = "build/test/data/apache.200.txt";
+  String inputFileIps = "build/test/data/ips.20.txt";
+  String inputFileNums = "build/test/data/nums.20.txt";
+  String inputFileCritics = "build/test/data/critics.txt";
+
+  String inputFileUpper = "build/test/data/upper.txt";
+  String inputFileLower = "build/test/data/lower.txt";
+  String inputFileLowerOffset = "build/test/data/lower-offset.txt";
+  String inputFileJoined = "build/test/data/lower+upper.txt";
+
+  String inputFileLhs = "build/test/data/lhs.txt";
+  String inputFileRhs = "build/test/data/rhs.txt";
+  String inputFileCross = "build/test/data/lhs+rhs-cross.txt";
+
+  String outputPath = "build/test/output/endpipe/";
+
+  public EndPipesTest()
+    {
+    super( "fielded pipes", false );
+    }
+
+  public void test()
+    {
+
+    }
+
+//  public void testSimpleGroup() throws Exception
+//    {
+//    if( !new File( inputFileApache ).exists() )
+//      fail( "data file not found" );
+//
+//    copyFromLocal( inputFileApache );
+//
+//    Tap source = new Dfs( new TextLine( new Fields( "offset", "line" ) ), inputFileApache );
+//
+//    Pipe pipe = new Pipe( "test" );
+//
+//    pipe = new Each( pipe, new Fields( "line" ), new RegexParser( new Fields( "ip" ), "^[^ ]*" ), new Fields( "ip" ) );
+//
+//    pipe = new Group( pipe, new Fields( "ip" ) );
+//
+//    pipe = new Every( pipe, new Count(), new Fields( "ip", "count" ) );
+//
+//    pipe = new EndPipe( pipe );
+//
+//    Tap sink = new Dfs( new TextLine(), outputPath + "/simple", true );
+//
+//    Flow flow = new FlowConnector( jobConf ).connect( source, sink, pipe );
+//
+////    flow.writeDOT( "groupcount.dot" );
+//
+//    flow.complete();
+//
+//    validateLength( flow, 131, null );
+//    }
+
+  }
